@@ -1,3 +1,12 @@
+2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_draw_radiobutton),
+	(murrine_draw_checkbox):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_radiobutton),
+	(murrine_rgba_draw_checkbox):
+	Changed inactive disabled checkbutton/radiobutton:
+	no background is drawn.
+
 2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c (murrine_draw_radiobutton),
